--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.4",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^9.1.2"
+    "vue-property-decorator": "^9.1.2",
+    "vuefire": "^2.2.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
